# pvzsync

./: .gitignore  CMakeLists.txt  README.md  config.ini  doc.txt  imgui.ini  main.cpp
include/: core.h  network.h  remote.h  ui.h
old/: build1.cmd  build3.cmd  config.ini  edit.cpp  main.cpp  main1.cpp  main3.cpp
src/: core.cpp  network.cpp  remote.cpp  ui.cpp
